-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.279 2008-05-06 04:03:12 guru Exp $
-----------------------------------------------------------------------------------------
2008-05-05	pwessel
	* psxyz.c:		Memory problem: Since realloc does not initialize we
				must explicitly set any pointers in the structure to NULL
				since we later use the pointer to determine if we need to
				free memory.
	* project.c:		Same.

2008-05-03	pwessel
	* psxy.c:		The -D option erroneously gave error when used properly.

-----------------------------------------------------------------------------------------
2008-05-01
	* tar 4.3.0 made and released via email
-----------------------------------------------------------------------------------------

2008-05-01	pwessel
	* gmt_map.c:		GMT_grd_project did not check if x_proj was NaN before trying
				to add/sub 360 degrees, hanging under Windows.
				
2008-05-01	remko
	* ps2raster.c:		When encountering BoundingBox: (atend), skip to the end.
	* grdsample.c:		Did not allocate enough memory, with crashes resulting.
	* share/conf/*.orig:	Replaced by *.in, and processed by ./configure using AC_SUBST
	* guru/GMT_share_files_ascii.lis:	Removed share/conf files.
	* guru/GMT_src_files_ascii.lis:		Added share/conf/*.in files.
	* configure.ac:		---"---, including setting EPS in BOTH US and SI when --enable-eps
	* guru/gmtguru.macros.orig, GNUmakefile: Added GMT_OTHER to add other flags to configure.

2008-04-29	pwessel
	* grdview.c:		Clarified that -T cannot take -JZ|z, fixed clipping.

2008-04-28	pwessel
	* mgg/mgd77togmt.c:	Did not initialize MGG_SHAREDIR path.
	
2008-04-28	remko
	* GMT_eckert.sh:	Removed. Was not used by anything.
	* GMT_gall_stereo.sh:	Added example for -JCyl_stere.
	* GMT_Chapter_6*.tex:	Added more information on optional -J parameters. Added some
				historical background.
	* examples, scripts:	Removed options in -J when same as default.

2008-04-26	pwessel